# RaportPKUP

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  About.md  CMakeLists.txt  CMakePresets.json  README.md  app.qmlproject  main.cpp.tmp  sonar-project.properties  vcpkg.json
.github/workflows/: main-windows.yml  publish-release.yml
3rd/: miktex-portable.7z
app/: CMakeLists.txt  MainWindow.qml  app.qmlproject  app.rc.in  main.cpp  qmlcomponents  qmlmodules  qmlmodules.cmake  qtquickcontrols2.conf
app/content/: App.qml  CMakeLists.txt  DataFilteringStepView.qml  DataInputStepView.qml  FormField.ui.qml  FormItemBase.qml  InputField.ui.qml  MainWindowItem.qml  MainWindowSideButton.ui.qml  MainWindowView.ui.qml  StepSelector.ui.qml  StepSelectorButton.ui.qml  Text.ui.qml  Theme.qml  ToolBar.ui.qml  UIButton.qml  UIText.ui.qml  qmldir
app/imports/: CMakeLists.txt
app/imports/app/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml  Theme.qml  qmldir
app/imports/app/designer/: plugin.metainfo
app/shared/: Button.qml  Button.ui.qml  CMakeLists.txt  Fonts.qml  InputField.ui.qml  MainWindowView.ui.qml  StepSelector.ui.qml  StepSelectorButton.ui.qml  Text.ui.qml  Theme.qml  UIText.qml  qmldir
app/src/: Application.cpp  Application.hpp  ApplicationDefinition.hpp  Command.hpp  CommitItem.hpp  GitAccessImpl.hpp  InputDataState.hpp  MainViewItem.cpp  MainViewItem.hpp  Process.hpp  RepositoryListItem.hpp  WindowController.h  WindowController.hpp  app_environment.h  commit_item.cpp  import_qml_plugins.h  main.cpp  process.cpp  repository_list_item.cpp  window_controller.cpp
app/src/include/: EmptyDeleter.hpp  SessionSetter.hpp
cmake/: FindRXQT.cmake  GenerateVersionInformation.cmake  PostInstallWin.cmake  PreCommitInstall.cmake
config/: Version.cmake  Version.h.in
docs/: preview-example.html
docs/LaTEX/: example-raport.tex
docs/graphics/: icon.psd
lib/: CMakeLists.txt  RaportGenCoreConfig.cmake.in  git_repository.cpp  repository.cpp
lib/include/: Author.hpp  Commit.hpp  Filters.hpp  GitRepository.hpp  GitRepositoryAccessor.hpp  GitRepositoryDetector.hpp  ICommand.hpp  IProcess.hpp  IRepository.hpp  IRepositoryAccessor.hpp  IRepositoryDetector.hpp  LibGit.hpp  Process.hpp  RaportGenCoreExport.h  base.hpp
lib/src/: LibGit.hpp  git_repository.cpp  handle.hpp  libgit.cpp  libgit_wrapper.cpp  libgit_wrapper.hpp  process_runner.cpp  process_runner.hpp  repository.cpp  repository_detector_git.cpp
lib/tests/: filters.cpp  git_repository.cpp
modules/content/: App.qml  CMakeLists.txt  DataFilteringStepView.qml  DataInputStepView.qml  DatePicker.qml  Fonts.qml  FormField.ui.qml  FormItemBase.qml  InputField.ui.qml  MainViewItem.qml  ReportingStepView.qml  StepSelector.qml  StepSelector.ui.qml  Theme.qml  UIButton.qml  UIButton.ui.qml
modules/logic/: CMakeLists.txt  CMakeLists.txt.cmf-temp
modules/logic/include/: Command.hpp  PresetsManager.hpp  WindowController.hpp
modules/logic/src/: Application.cpp  Application.hpp  ApplicationDefinition.hpp  Command.cpp  Command.hpp  CommitItem.hpp  EmptyDeleter.hpp  GitAccessImpl.hpp  InputDataState.hpp  MainViewItem.cpp  MainViewItem.hpp  Preset.hpp  PresetsManager.h  Process.hpp  RepositoryListItem.hpp  WindowController.hpp  commit_item.cpp  preset.cpp  presets_manager.cpp  process.cpp  repository_list_item.cpp  window_controller.cpp  window_controller_calculation.cpp  window_controller_document.cpp  window_controller_fields.cpp  window_controller_presets.cpp  window_controller_reporting.cpp
